// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`normalizes empty configuration 1`] = `
Urc {
  "babelPlugins": Array [],
  "babelPresets": Array [],
  "devServerHistoryFallback": false,
  "environmentVariables": Array [],
  "htmlSource": "<PROJECT_ROOT>/lib/default-html.js",
  "jsEntry": "<PROJECT_ROOT>/underreact.config.js/src/entry.js",
  "outputDirectory": "<PROJECT_ROOT>/underreact.config.js/_underreact-site",
  "polyfills": Object {
    "fetch": false,
    "objectAssign": false,
    "promise": false,
  },
  "port": 8080,
  "postcssPlugins": Array [],
  "production": undefined,
  "publicAssetsPath": "/underreact-assets",
  "publicDirectory": "<PROJECT_ROOT>/underreact.config.js/public",
  "rootDirectory": "<PROJECT_ROOT>/underreact.config.js",
  "siteBasePath": "",
  "stats": undefined,
  "stylesheets": Array [],
  "vendorModules": Array [],
  "webpackConfigTransform": [Function],
  "webpackLoaders": Array [],
  "webpackPlugins": Array [],
}
`;

exports[`normalizes fancy configuration 1`] = `
Urc {
  "babelPlugins": Array [
    "/babel-plugin-lodash",
  ],
  "babelPresets": Array [],
  "devServerHistoryFallback": false,
  "environmentVariables": Array [
    "ENV_VAR",
  ],
  "htmlSource": "<PROJECT_ROOT>/lib/config/src/index.html",
  "jsEntry": "<PROJECT_ROOT>/underreact.config.js/src/entry.js",
  "outputDirectory": "<PROJECT_ROOT>/underreact.config.js/_underreact-site",
  "polyfills": Object {
    "fetch": true,
    "objectAssign": false,
    "promise": true,
  },
  "port": 8080,
  "postcssPlugins": Array [],
  "production": undefined,
  "publicAssetsPath": "/cacheable-things",
  "publicDirectory": "<PROJECT_ROOT>/underreact.config.js/public",
  "rootDirectory": "<PROJECT_ROOT>/underreact.config.js",
  "siteBasePath": "/fancy",
  "stats": undefined,
  "stylesheets": Array [
    "<PROJECT_ROOT>/lib/config/src/bg.css",
  ],
  "vendorModules": Array [],
  "webpackConfigTransform": [Function],
  "webpackLoaders": Array [
    Object {
      "test": /\\\\\\.less\\$/,
      "use": Array [
        "css-loader",
        "less-loader",
      ],
    },
  ],
  "webpackPlugins": Array [
    [Function],
  ],
}
`;
